python/ql/test/extractor-tests/syntax_error/illegal_context2.py

#This parses, but is illegal.
"hello" = "world"